# rust-lpc54114

./: .gitattributes  .gitignore  Cargo.toml  Justfile  README.md  debug-coproc.gdb  debug.gdb  memory.x
.cargo/: config
src/lpc54114/: Cargo.toml  build.rs  link.x
src/lpc54114-coproc/: Cargo.toml  build.rs  link.x
src/lpc54114-coproc/src/: main.rs
src/lpc54114/src/: coproc-image.S  init.S  lpc54114.h  main.rs
