[package]
name = "rust-lpc54114-coproc"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
panic-halt = "0.2"
panic-semihosting = "0.5"
