[package]
name = "rust-lpc54114"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
panic-halt = "0.2"
panic-semihosting = "0.5"

[build-dependencies]
cc = "1.0"
cargo-binutils = "0.3"
